# ProjectCompass

./: .dockerhealthcheck  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  PUBLISHING.md  README.md  __init__.py  app.py  basefun.py  config.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.public.yml  docker-compose.yml  docker_build_and_run.sh  docker_startup.sh  index.html  llm.bash  logging_config.py  pyproject.toml  requirements.txt  run.py  setup_ollama.sh
.github/workflows/: ci.yml  docker-publish.yml
Analyses/Employee Satisfaction Survey/: metadata.yaml  readme.md
Saved_data/: employees.csv  relatedEntities.csv  sales_data.csv  website_metrics.csv
blueprints/: agent.py  api.py  auth.py  catalog.py  data.py
docs/: architecture.html  configuration.html  core_classes.html  docker.html  overview.html  routes.html  templates.html
static/: logging_page.html
static/css/: rawgraph1.css  (+3 more)
templates/: RAWGraphs.html  README.md  analysis.html  chat.html  chat_analysis.html  create_analysis.html  data_list.html  data_upload.html  header.html  iframetemplate.html  index.html  internal_error.html  investigations.html  loader.html  login_page.html  not_found_error.html  outputs.html  overview.html  process_complete.html  query_results.html  schedules.html  todopage.html  versions_single_analysis.html
tests/: conftest.py  test_agent_safety.py  test_api.py  test_auth.py  test_catalog.py  test_data_utils.py
utils/: README.md  agent_utils.py  analysis_utils.py  data_utils.py  html_utils.py
(+20 files in other folders)
