[project]
name = "projectcompass"
version = "0.1.0"
description = "Analysis catalog and execution platform"
requires-python = ">=3.10"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "flask-wtf==1.2.1",
    "gitpython==3.1.40",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pyyaml==6.0.1",
    "gunicorn==21.2.0",
    "pyjwt==2.8.0",
    "duckdb>=0.9.0",
    "python-dotenv==1.0.1",
    "werkzeug>=3.0.0",
]

[project.optional-dependencies]
llm = [
    "llama-index-core>=0.10.0",
    "llama-index-llms-ollama",
    "llama-index-embeddings-ollama",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B"]
ignore = ["S101", "S104", "S105", "S108", "S110", "S603", "S605", "S607", "S608"]

[tool.ruff.lint.per-file-ignores]
"utils/analysis_utils.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
